--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62423,6 +62423,7 @@ server=/nzqyowk.com/114.114.114.114
 server=/nzsiteres.com/114.114.114.114
 server=/nzw6.com/114.114.114.114
 server=/nzwgs.com/114.114.114.114
+server=/nzydzsw.com/114.114.114.114
 server=/o--o.win/114.114.114.114
 server=/o-netcom.com/114.114.114.114
 server=/o-star.cc/114.114.114.114
