accelerated-domains: add o0-2.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62427,6 +62427,7 @@ server=/nzydzsw.com/114.114.114.114
 server=/o--o.win/114.114.114.114
 server=/o-netcom.com/114.114.114.114
 server=/o-star.cc/114.114.114.114
+server=/o0-2.com/114.114.114.114
 server=/o02220aokk.com/114.114.114.114
 server=/o02231aokk.com/114.114.114.114
 server=/o02251aokk.com/114.114.114.114
