--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62529,6 +62529,7 @@ server=/ocimg.com/114.114.114.114
 server=/oclean.com/114.114.114.114
 server=/oclkj.com/114.114.114.114
 server=/ocn187.com/114.114.114.114
+server=/ocnttv.com/114.114.114.114
 server=/ocpuritech.com/114.114.114.114
 server=/ocsjs.com/114.114.114.114
 server=/ocsp.us.cdnetworks.com/114.114.114.114
