--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62555,6 +62555,7 @@ server=/ocuwyfarlvbq.com/114.114.114.114
 server=/ocwms.com/114.114.114.114
 server=/odaily.news/114.114.114.114
 server=/odao.com/114.114.114.114
+server=/oddyqw.com/114.114.114.114
 server=/odict.net/114.114.114.114
 server=/odinichina.com/114.114.114.114
 server=/odinjc.com/114.114.114.114
