--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62873,6 +62873,7 @@ server=/oneiwff.com/114.114.114.114
 server=/onekey.cc/114.114.114.114
 server=/onekeyghost.com/114.114.114.114
 server=/onelife-love.com/114.114.114.114
+server=/onelnk.com/114.114.114.114
 server=/onemob.mobi/114.114.114.114
 server=/onenice.tech/114.114.114.114
 server=/oneniceapp.com/114.114.114.114
