--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63024,6 +63024,7 @@ server=/opencloudos.org/114.114.114.114
 server=/opencloudos.tech/114.114.114.114
 server=/opencourt.vip/114.114.114.114
 server=/opendatalab.com/114.114.114.114
+server=/opendn.xyz/114.114.114.114
 server=/opendns123.com/114.114.114.114
 server=/openedv.com/114.114.114.114
 server=/openerp.hk/114.114.114.114
