accelerated-domains: add openharmonyproject.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63031,6 +63031,7 @@ server=/openfde.com/114.114.114.114
 server=/openfrp.net/114.114.114.114
 server=/opengcc.org/114.114.114.114
 server=/opengslb.com/114.114.114.114
+server=/openharmonyproject.com/114.114.114.114
 server=/openinstall.com/114.114.114.114
 server=/openinstall.io/114.114.114.114
 server=/openintelliedge.tech/114.114.114.114
