accelerated-domains: add opuzswk5tbt25.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63109,6 +63109,7 @@ server=/optmv.com/114.114.114.114
 server=/optol.net/114.114.114.114
 server=/optuk2.com/114.114.114.114
 server=/optzmx.com/114.114.114.114
+server=/opuzswk5tbt25.com/114.114.114.114
 server=/opwill.com/114.114.114.114
 server=/opython.com/114.114.114.114
 server=/oq78.com/114.114.114.114
