--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63204,6 +63204,7 @@ server=/os7blue.com/114.114.114.114
 server=/osaaa.com/114.114.114.114
 server=/osakacopyshop.com/114.114.114.114
 server=/osase.net/114.114.114.114
+server=/osaws.com/114.114.114.114
 server=/osbean.com/114.114.114.114
 server=/osbzr.com/114.114.114.114
 server=/oscaches.com/114.114.114.114
