--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63345,6 +63345,7 @@ server=/ourdvs.info/114.114.114.114
 server=/ourdvs.net/114.114.114.114
 server=/ourdvsssvip.com/114.114.114.114
 server=/ourdxz.com/114.114.114.114
+server=/ourdxz.info/114.114.114.114
 server=/oureman.com/114.114.114.114
 server=/ourep.com/114.114.114.114
 server=/ourgame.com/114.114.114.114
