--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63341,6 +63341,7 @@ server=/ourdvs.net/114.114.114.114
 server=/ourdvsssvip.com/114.114.114.114
 server=/ourdxz.com/114.114.114.114
 server=/ourdxz.info/114.114.114.114
+server=/ourdxz.org/114.114.114.114
 server=/oureman.com/114.114.114.114
 server=/ourep.com/114.114.114.114
 server=/ourgame.com/114.114.114.114
