accelerated-domains: add ourplat.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63366,6 +63366,7 @@ server=/ourmate.net/114.114.114.114
 server=/ourmis.com/114.114.114.114
 server=/ournotepad.com/114.114.114.114
 server=/ourpalm.com/114.114.114.114
+server=/ourplat.net/114.114.114.114
 server=/ourplay.net/114.114.114.114
 server=/ourqm.com/114.114.114.114
 server=/ourren.com/114.114.114.114
