accelerated-domains: add owsgo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63458,6 +63458,7 @@ server=/ownwuh.xyz/114.114.114.114
 server=/owocloud.net/114.114.114.114
 server=/owoit.com/114.114.114.114
 server=/owseals.com/114.114.114.114
+server=/owsgo.com/114.114.114.114
 server=/owspace.com/114.114.114.114
 server=/owulia.com/114.114.114.114
 server=/ox11.com/114.114.114.114
