--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63541,6 +63541,7 @@ server=/pacfc.com/114.114.114.114
 server=/pacgatelaw.com/114.114.114.114
 server=/pacificchinaaero.com/114.114.114.114
 server=/pacilution.com/114.114.114.114
+server=/package12.com/114.114.114.114
 server=/packetmania.net/114.114.114.114
 server=/packsky.com/114.114.114.114
 server=/packtom.com/114.114.114.114
