accelerated-domains: add pagescube.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63557,6 +63557,7 @@ server=/pafwl.com/114.114.114.114
 server=/pageadmin.net/114.114.114.114
 server=/pagechoice.com/114.114.114.114
 server=/pagechoice.net/114.114.114.114
+server=/pagescube.com/114.114.114.114
 server=/pageseagle.com/114.114.114.114
 server=/pahou.com/114.114.114.114
 server=/pahx.com/114.114.114.114
