accelerated-domains: add pailitao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63584,6 +63584,7 @@ server=/paihb.com/114.114.114.114
 server=/paihotels.cc/114.114.114.114
 server=/paiky.com/114.114.114.114
 server=/paiky.net/114.114.114.114
+server=/pailitao.com/114.114.114.114
 server=/pailixiang.com/114.114.114.114
 server=/paimaprint.com/114.114.114.114
 server=/paime.com/114.114.114.114
