--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63830,6 +63830,7 @@ server=/partnerboost.com/114.114.114.114
 server=/party68.com/114.114.114.114
 server=/pascalmorio.com/114.114.114.114
 server=/paschermontre.to/114.114.114.114
+server=/pasco.cc/114.114.114.114
 server=/pasertech.com/114.114.114.114
 server=/pasos2.com/114.114.114.114
 server=/pass7.cc/114.114.114.114
