--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64016,6 +64016,7 @@ server=/pdreamer.com/114.114.114.114
 server=/pdryx.com/114.114.114.114
 server=/pdscb.com/114.114.114.114
 server=/pdsgjj.com/114.114.114.114
+server=/pdsjycm.com/114.114.114.114
 server=/pdskgb.com/114.114.114.114
 server=/pdss.xyz/114.114.114.114
 server=/pdsxww.com/114.114.114.114
