--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64047,6 +64047,7 @@ server=/pearvideo.com/114.114.114.114
 server=/peasrch.com/114.114.114.114
 server=/peatour.com/114.114.114.114
 server=/pec33.com/114.114.114.114
+server=/peccn.com/114.114.114.114
 server=/pechoin.com/114.114.114.114
 server=/pecoo.com/114.114.114.114
 server=/pediy.com/114.114.114.114
