accelerated-domains: add pepsitmall.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64155,6 +64155,7 @@ server=/peopleyuqing.com/114.114.114.114
 server=/pepresource.com/114.114.114.114
 server=/pepsidns.cc/114.114.114.114
 server=/pepsimeipai.com/114.114.114.114
+server=/pepsitmall.com/114.114.114.114
 server=/perfect-input.com/114.114.114.114
 server=/perfect99.com/114.114.114.114
 server=/perfectdiary.com/114.114.114.114
