accelerated-domains: add peryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64167,6 +64167,7 @@ server=/peropero.net/114.114.114.114
 server=/peroperogames.com/114.114.114.114
 server=/personpsy.org/114.114.114.114
 server=/perspectivar.com/114.114.114.114
+server=/peryt111.fun/114.114.114.114
 server=/pescms.com/114.114.114.114
 server=/pesiv.com/114.114.114.114
 server=/pesrmyy.com/114.114.114.114
