--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64242,6 +64242,7 @@ server=/pharnexcloud.com/114.114.114.114
 server=/phaser-china.com/114.114.114.114
 server=/phb01.com/114.114.114.114
 server=/phb123.com/114.114.114.114
+server=/phcoal.com/114.114.114.114
 server=/phedu.net/114.114.114.114
 server=/phemu.net/114.114.114.114
 server=/phenom-sem.com/114.114.114.114
