--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64276,6 +64276,7 @@ server=/phonelinksoft.com/114.114.114.114
 server=/phonertech.com/114.114.114.114
 server=/phonthing.com/114.114.114.114
 server=/phopic.com/114.114.114.114
+server=/phormchina.com/114.114.114.114
 server=/phosun.com/114.114.114.114
 server=/photo0086.com/114.114.114.114
 server=/photo3050.com/114.114.114.114
