accelerated-domains: add piaososo.co

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64368,6 +64368,7 @@ server=/piaoliusan.com/114.114.114.114
 server=/piaoniu.com/114.114.114.114
 server=/piaoquantv.com/114.114.114.114
 server=/piaoshen.com/114.114.114.114
+server=/piaososo.co/114.114.114.114
 server=/piaotian.org/114.114.114.114
 server=/piaotongyun.com/114.114.114.114
 server=/piaowutong.cc/114.114.114.114
