accelerated-domains: add pig66.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64422,6 +64422,7 @@ server=/pifa.bz/114.114.114.114
 server=/pifa333.com/114.114.114.114
 server=/pifukezaixian.com/114.114.114.114
 server=/pig4cloud.com/114.114.114.114
+server=/pig66.com/114.114.114.114
 server=/pigai.org/114.114.114.114
 server=/pigcms.com/114.114.114.114
 server=/pighaihe.com/114.114.114.114
