--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64610,6 +64610,7 @@ server=/pipuda.com/114.114.114.114
 server=/piqs.com/114.114.114.114
 server=/piscesys.com/114.114.114.114
 server=/pisx.com/114.114.114.114
+server=/pitayaio.com/114.114.114.114
 server=/piuqiupia.com/114.114.114.114
 server=/pixbe.com/114.114.114.114
 server=/pixcakeai.com/114.114.114.114
