--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64802,6 +64802,7 @@ server=/pm265.com/114.114.114.114
 server=/pm28.com/114.114.114.114
 server=/pm360.com/114.114.114.114
 server=/pm360.net/114.114.114.114
+server=/pmallstore.com/114.114.114.114
 server=/pmcaff.com/114.114.114.114
 server=/pmceo.com/114.114.114.114
 server=/pmcj-group.com/114.114.114.114
