accelerated-domains: add pochengweiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64852,6 +64852,7 @@ server=/po.co/114.114.114.114
 server=/pobaby.net/114.114.114.114
 server=/pobasoft.com/114.114.114.114
 server=/pochanguanliyanjiu.com/114.114.114.114
+server=/pochengweiyuan.com/114.114.114.114
 server=/pocketdigi.com/114.114.114.114
 server=/pocketuni.net/114.114.114.114
 server=/pocomagnetic.com/114.114.114.114
