--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64877,6 +64877,7 @@ server=/poizon.com/114.114.114.114
 server=/poj.org/114.114.114.114
 server=/pojianyunfu.com/114.114.114.114
 server=/poke203.com/114.114.114.114
+server=/poke88.com/114.114.114.114
 server=/pokemmc.com/114.114.114.114
 server=/pokemon-unitepgame.com/114.114.114.114
 server=/pokemon.vip/114.114.114.114
