accelerated-domains: add pomkl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64908,6 +64908,7 @@ server=/polywuye.com/114.114.114.114
 server=/polyxfb.com/114.114.114.114
 server=/pomears.com/114.114.114.114
 server=/pomeloyun.com/114.114.114.114
+server=/pomkl.com/114.114.114.114
 server=/pomoho.com/114.114.114.114
 server=/pondernext.com/114.114.114.114
 server=/ponley.com/114.114.114.114
