--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65052,6 +65052,7 @@ server=/pp9kk.com/114.114.114.114
 server=/pp9l.com/114.114.114.114
 server=/ppad.com/114.114.114.114
 server=/ppadssi.com/114.114.114.114
+server=/ppaie.com/114.114.114.114
 server=/ppaiss.com/114.114.114.114
 server=/ppbizon.com/114.114.114.114
 server=/ppchuguan.com/114.114.114.114
