--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65143,6 +65143,7 @@ server=/pptv.com/114.114.114.114
 server=/pptv5.com/114.114.114.114
 server=/pptvdata.com/114.114.114.114
 server=/pptvimg.com/114.114.114.114
+server=/pptvnet.com/114.114.114.114
 server=/pptvyun.com/114.114.114.114
 server=/pptxy.com/114.114.114.114
 server=/ppurl.com/114.114.114.114
