accelerated-domains: add psbxg.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65265,6 +65265,7 @@ server=/psald.com/114.114.114.114
 server=/psb888.com/114.114.114.114
 server=/psbc-ubank.com/114.114.114.114
 server=/psbc.com/114.114.114.114
+server=/psbxg.net/114.114.114.114
 server=/psc4d.com/114.114.114.114
 server=/pscddos.com/114.114.114.114
 server=/psd.net/114.114.114.114
