--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65492,6 +65492,7 @@ server=/pw65.cc/114.114.114.114
 server=/pw88.com/114.114.114.114
 server=/pwand.com/114.114.114.114
 server=/pwddhc.xyz/114.114.114.114
+server=/pwjhg.com/114.114.114.114
 server=/pwmis.com/114.114.114.114
 server=/pwmqr.com/114.114.114.114
 server=/pword.net/114.114.114.114
