--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65892,6 +65892,7 @@ server=/qdzxyy.com/114.114.114.114
 server=/qdzyspjx.com/114.114.114.114
 server=/qdzz.com/114.114.114.114
 server=/qe32.com/114.114.114.114
+server=/qebgcdcjr000.fun/114.114.114.114
 server=/qebk.com/114.114.114.114
 server=/qechu.com/114.114.114.114
 server=/qeebike.com/114.114.114.114
