accelerated-domains: add qekgcdcjr000.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65896,6 +65896,7 @@ server=/qeelai.com/114.114.114.114
 server=/qeeniao.com/114.114.114.114
 server=/qeerd.com/114.114.114.114
 server=/qefee.com/114.114.114.114
+server=/qekgcdcjr000.fun/114.114.114.114
 server=/qeoagphm.com/114.114.114.114
 server=/qeodns.com/114.114.114.114
 server=/qeodns.net/114.114.114.114
