--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65900,6 +65900,7 @@ server=/qekgcdcjr000.fun/114.114.114.114
 server=/qeoagphm.com/114.114.114.114
 server=/qeodns.com/114.114.114.114
 server=/qeodns.net/114.114.114.114
+server=/qeogcdcjr000.fun/114.114.114.114
 server=/qeqnet.com/114.114.114.114
 server=/qera.online/114.114.114.114
 server=/qerwsoft.com/114.114.114.114
