accelerated-domains: add qeryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65910,6 +65910,7 @@ server=/qeogcdcjr000.fun/114.114.114.114
 server=/qeqnet.com/114.114.114.114
 server=/qera.online/114.114.114.114
 server=/qerwsoft.com/114.114.114.114
+server=/qeryt111.fun/114.114.114.114
 server=/qescaen.com/114.114.114.114
 server=/qeteshcn.com/114.114.114.114
 server=/qeto.com/114.114.114.114
