accelerated-domains: add qeugcdcjr000.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65914,6 +65914,7 @@ server=/qeryt111.fun/114.114.114.114
 server=/qescaen.com/114.114.114.114
 server=/qeteshcn.com/114.114.114.114
 server=/qeto.com/114.114.114.114
+server=/qeugcdcjr000.fun/114.114.114.114
 server=/qeyopxb.com/114.114.114.114
 server=/qf027.com/114.114.114.114
 server=/qfamilylaw.com/114.114.114.114
