--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65963,6 +65963,7 @@ server=/qgysj.org/114.114.114.114
 server=/qgyyzs.net/114.114.114.114
 server=/qgzzz.com/114.114.114.114
 server=/qh-cdn.com/114.114.114.114
+server=/qh-dl.com/114.114.114.114
 server=/qh-lb.com/114.114.114.114
 server=/qh24.com/114.114.114.114
 server=/qh4321.com/114.114.114.114
