accelerated-domains: add qhaif.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65975,6 +65975,7 @@ server=/qh24.com/114.114.114.114
 server=/qh4321.com/114.114.114.114
 server=/qh6bc.com/114.114.114.114
 server=/qh9y.com/114.114.114.114
+server=/qhaif.com/114.114.114.114
 server=/qhangyun.com/114.114.114.114
 server=/qhapp.top/114.114.114.114
 server=/qhass.org/114.114.114.114
