accelerated-domains: add qhdfxkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65983,6 +65983,7 @@ server=/qhcswhh.com/114.114.114.114
 server=/qhd.net/114.114.114.114
 server=/qhdatongnews.com/114.114.114.114
 server=/qhdcm.com/114.114.114.114
+server=/qhdfxkj.com/114.114.114.114
 server=/qhdgjj.com/114.114.114.114
 server=/qhdglc.com/114.114.114.114
 server=/qhdnews.com/114.114.114.114
