--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65986,6 +65986,7 @@ server=/qhdcm.com/114.114.114.114
 server=/qhdfxkj.com/114.114.114.114
 server=/qhdgjj.com/114.114.114.114
 server=/qhdglc.com/114.114.114.114
+server=/qhdlcdn.com/114.114.114.114
 server=/qhdnews.com/114.114.114.114
 server=/qhdren.com/114.114.114.114
 server=/qhduhu.com/114.114.114.114
