--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66009,6 +66009,7 @@ server=/qhgmkt.com/114.114.114.114
 server=/qhgy.net/114.114.114.114
 server=/qhhxnw.com/114.114.114.114
 server=/qhimg.com/114.114.114.114
+server=/qhimgs.com/114.114.114.114
 server=/qhimgs0.com/114.114.114.114
 server=/qhimgs1.com/114.114.114.114
 server=/qhimgs3.com/114.114.114.114
