accelerated-domains: add qhimgs2.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66012,6 +66012,7 @@ server=/qhimg.com/114.114.114.114
 server=/qhimgs.com/114.114.114.114
 server=/qhimgs0.com/114.114.114.114
 server=/qhimgs1.com/114.114.114.114
+server=/qhimgs2.com/114.114.114.114
 server=/qhimgs3.com/114.114.114.114
 server=/qhimgs4.com/114.114.114.114
 server=/qhimi.com/114.114.114.114
