--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66009,6 +66009,7 @@ server=/qhimgs1.com/114.114.114.114
 server=/qhimgs2.com/114.114.114.114
 server=/qhimgs3.com/114.114.114.114
 server=/qhimgs4.com/114.114.114.114
+server=/qhimgs5.com/114.114.114.114
 server=/qhimi.com/114.114.114.114
 server=/qhjyks.com/114.114.114.114
 server=/qhkyfund.com/114.114.114.114
