accelerated-domains: add qhimgs6.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66016,6 +66016,7 @@ server=/qhimgs2.com/114.114.114.114
 server=/qhimgs3.com/114.114.114.114
 server=/qhimgs4.com/114.114.114.114
 server=/qhimgs5.com/114.114.114.114
+server=/qhimgs6.com/114.114.114.114
 server=/qhimi.com/114.114.114.114
 server=/qhjyks.com/114.114.114.114
 server=/qhkyfund.com/114.114.114.114
