--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66042,6 +66042,7 @@ server=/qhstatic.com/114.114.114.114
 server=/qhsxf.net/114.114.114.114
 server=/qhtf-china.com/114.114.114.114
 server=/qhtibetan.com/114.114.114.114
+server=/qhtui.com/114.114.114.114
 server=/qhtycp.com/114.114.114.114
 server=/qhtyzx.com/114.114.114.114
 server=/qhupdate.com/114.114.114.114
