--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66039,6 +66039,7 @@ server=/qhtibetan.com/114.114.114.114
 server=/qhtui.com/114.114.114.114
 server=/qhtycp.com/114.114.114.114
 server=/qhtyzx.com/114.114.114.114
+server=/qhuade.com/114.114.114.114
 server=/qhupdate.com/114.114.114.114
 server=/qhwgz.com/114.114.114.114
 server=/qhwmw.com/114.114.114.114
