accelerated-domains: add qiqiww.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66676,6 +66676,7 @@ server=/qiqilab.com/114.114.114.114
 server=/qiqipu.com/114.114.114.114
 server=/qiqiuyu.com/114.114.114.114
 server=/qiqiuyun.net/114.114.114.114
+server=/qiqiww.com/114.114.114.114
 server=/qiqjc.com/114.114.114.114
 server=/qiquanwl.com/114.114.114.114
 server=/qiquhudong.com/114.114.114.114
