--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66838,6 +66838,7 @@ server=/qizhuyun.com/114.114.114.114
 server=/qizuang.com/114.114.114.114
 server=/qizubang.com/114.114.114.114
 server=/qj023.com/114.114.114.114
+server=/qj175.com/114.114.114.114
 server=/qj26.com/114.114.114.114
 server=/qj9zn3qd2dj2ck00.app/114.114.114.114
 server=/qjbwgh.com/114.114.114.114
