accelerated-domains: add qmz931.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66957,6 +66957,7 @@ server=/qmyq.com/114.114.114.114
 server=/qmyvps.com/114.114.114.114
 server=/qmyyl.com/114.114.114.114
 server=/qmz5.com/114.114.114.114
+server=/qmz931.com/114.114.114.114
 server=/qmzs.com/114.114.114.114
 server=/qnali.com/114.114.114.114
 server=/qnapcn.com/114.114.114.114
