accelerated-domains: add qqdwz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67060,6 +67060,7 @@ server=/qqder.com/114.114.114.114
 server=/qqdiannao.com/114.114.114.114
 server=/qqdiannaoguanjiadl.com/114.114.114.114
 server=/qqdna.com/114.114.114.114
+server=/qqdwz.com/114.114.114.114
 server=/qqdzzb.win/114.114.114.114
 server=/qqe2.com/114.114.114.114
 server=/qqeml.com/114.114.114.114
