accelerated-domains: add qqryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67120,6 +67120,7 @@ server=/qqrer.com/114.114.114.114
 server=/qqride.com/114.114.114.114
 server=/qqrizhi.com/114.114.114.114
 server=/qqro.com/114.114.114.114
+server=/qqryt111.fun/114.114.114.114
 server=/qqscb.com/114.114.114.114
 server=/qqsgame.com/114.114.114.114
 server=/qqsgmob.com/114.114.114.114
