--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67269,6 +67269,7 @@ server=/qtlcdn.com/114.114.114.114
 server=/qtlcdn.net/114.114.114.114
 server=/qtlcdn360.info/114.114.114.114
 server=/qtlcdn360.top/114.114.114.114
+server=/qtlcdn360.xin/114.114.114.114
 server=/qtlcdncn.info/114.114.114.114
 server=/qtlcn.com/114.114.114.114
 server=/qtlcname.com/114.114.114.114
