accelerated-domains: add qtlcdn360.xyz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67270,6 +67270,7 @@ server=/qtlcdn.net/114.114.114.114
 server=/qtlcdn360.info/114.114.114.114
 server=/qtlcdn360.top/114.114.114.114
 server=/qtlcdn360.xin/114.114.114.114
+server=/qtlcdn360.xyz/114.114.114.114
 server=/qtlcdncn.info/114.114.114.114
 server=/qtlcn.com/114.114.114.114
 server=/qtlcname.com/114.114.114.114
