accelerated-domains: add qtlgslbcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67276,6 +67276,7 @@ server=/qtlcn.com/114.114.114.114
 server=/qtlcname.com/114.114.114.114
 server=/qtlglb.com/114.114.114.114
 server=/qtlglb.info/114.114.114.114
+server=/qtlgslbcn.com/114.114.114.114
 server=/qtlgslbcn.info/114.114.114.114
 server=/qtmojo.com/114.114.114.114
 server=/qtonghua.com/114.114.114.114
