--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67272,6 +67272,7 @@ server=/qtlglb.com/114.114.114.114
 server=/qtlglb.info/114.114.114.114
 server=/qtlgslbcn.com/114.114.114.114
 server=/qtlgslbcn.info/114.114.114.114
+server=/qtlgslbcn.net/114.114.114.114
 server=/qtmojo.com/114.114.114.114
 server=/qtonghua.com/114.114.114.114
 server=/qtool.net/114.114.114.114
