--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67282,6 +67282,7 @@ server=/qtlgslbcn.net/114.114.114.114
 server=/qtmojo.com/114.114.114.114
 server=/qtonghua.com/114.114.114.114
 server=/qtool.net/114.114.114.114
+server=/qtroytj33.fun/114.114.114.114
 server=/qtrun.com/114.114.114.114
 server=/qtshe.com/114.114.114.114
 server=/qtshisan.com/114.114.114.114
