accelerated-domains: add qualcomm-challenge.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67297,6 +67297,7 @@ server=/qu2345.com/114.114.114.114
 server=/qu247.com/114.114.114.114
 server=/qu67.com/114.114.114.114
 server=/qua.com/114.114.114.114
+server=/qualcomm-challenge.com/114.114.114.114
 server=/qualitycloud.top/114.114.114.114
 server=/quan.mx/114.114.114.114
 server=/quan007.com/114.114.114.114
