accelerated-domains: add quyuancn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67810,6 +67810,7 @@ server=/quyiyuan.com/114.114.114.114
 server=/quyou.net/114.114.114.114
 server=/quyouhui.net/114.114.114.114
 server=/quyu.net/114.114.114.114
+server=/quyuancn.com/114.114.114.114
 server=/quyundong.com/114.114.114.114
 server=/quzhiwen.com/114.114.114.114
 server=/quzhuanxiang.com/114.114.114.114
