--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67816,6 +67816,7 @@ server=/quyiyuan.com/114.114.114.114
 server=/quyou.net/114.114.114.114
 server=/quyouhui.net/114.114.114.114
 server=/quyu.net/114.114.114.114
+server=/quyuancn.com/114.114.114.114
 server=/quyundong.com/114.114.114.114
 server=/quzhiwen.com/114.114.114.114
 server=/quzhuanxiang.com/114.114.114.114
