accelerated-domains: add qzdfc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67992,6 +67992,7 @@ server=/qzclfc.com/114.114.114.114
 server=/qzcns.com/114.114.114.114
 server=/qzda.com/114.114.114.114
 server=/qzdatasoft.com/114.114.114.114
+server=/qzdfc.com/114.114.114.114
 server=/qzdfys.com/114.114.114.114
 server=/qzdswy.com/114.114.114.114
 server=/qzdxcj888.com/114.114.114.114
