accelerated-domains: add qznxt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68048,6 +68048,7 @@ server=/qznovelpic.com/114.114.114.114
 server=/qznovelstatic.com/114.114.114.114
 server=/qznovelvod.com/114.114.114.114
 server=/qznqefififri28.xyz/114.114.114.114
+server=/qznxt.com/114.114.114.114
 server=/qzone.cc/114.114.114.114
 server=/qzone.com/114.114.114.114
 server=/qzoneapp.com/114.114.114.114
