--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68092,6 +68092,7 @@ server=/qzxdianzi.com/114.114.114.114
 server=/qzxkeji.com/114.114.114.114
 server=/qzxx.com/114.114.114.114
 server=/qzyb.com/114.114.114.114
+server=/qzylyp.com/114.114.114.114
 server=/qzynhhmm.com/114.114.114.114
 server=/qzynx.com/114.114.114.114
 server=/qzyonyou.com/114.114.114.114
