accelerated-domains: add qzzljx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68106,6 +68106,7 @@ server=/qzzhedu.com/114.114.114.114
 server=/qzzhonghan.com/114.114.114.114
 server=/qzzhwk.com/114.114.114.114
 server=/qzzjchy.com/114.114.114.114
+server=/qzzljx.com/114.114.114.114
 server=/qzzn.com/114.114.114.114
 server=/qzzpw.net/114.114.114.114
 server=/qzzres.com/114.114.114.114
