accelerated-domains: add r9t1.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68126,6 +68126,7 @@ server=/r5g.cc/114.114.114.114
 server=/r5k.com/114.114.114.114
 server=/r5tao.com/114.114.114.114
 server=/r77777777.com/114.114.114.114
+server=/r9t1.com/114.114.114.114
 server=/ra022.com/114.114.114.114
 server=/ra216.com/114.114.114.114
 server=/ra2ol.com/114.114.114.114
