accelerated-domains: add reqwevf3.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68640,6 +68640,7 @@ server=/reportify.cc/114.114.114.114
 server=/reportrc.com/114.114.114.114
 server=/reptilesworld.com/114.114.114.114
 server=/reqable.com/114.114.114.114
+server=/reqwevf3.fun/114.114.114.114
 server=/rergdfh.com/114.114.114.114
 server=/reseetech.com/114.114.114.114
 server=/reservehemu.com/114.114.114.114
