--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68636,6 +68636,7 @@ server=/reptilesworld.com/114.114.114.114
 server=/reqable.com/114.114.114.114
 server=/reqwevf3.fun/114.114.114.114
 server=/rergdfh.com/114.114.114.114
+server=/reryt111.fun/114.114.114.114
 server=/reseetech.com/114.114.114.114
 server=/reservehemu.com/114.114.114.114
 server=/resheji.com/114.114.114.114
