--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68673,6 +68673,7 @@ server=/revy.asia/114.114.114.114
 server=/rew65.com/114.114.114.114
 server=/rewnat.xyz/114.114.114.114
 server=/reworlder.com/114.114.114.114
+server=/rewrwrt4.fun/114.114.114.114
 server=/rewuwang.com/114.114.114.114
 server=/rexcdn.com/114.114.114.114
 server=/rexdf.org/114.114.114.114
