--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68775,6 +68775,7 @@ server=/richtj.com/114.114.114.114
 server=/ricklj.com/114.114.114.114
 server=/rickyfabrics.com/114.114.114.114
 server=/rickysu.com/114.114.114.114
+server=/ricqo.com/114.114.114.114
 server=/ricterz.me/114.114.114.114
 server=/rictos.com/114.114.114.114
 server=/riecent.com/114.114.114.114
