--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69149,6 +69149,7 @@ server=/rq.run/114.114.114.114
 server=/rqjrb.com/114.114.114.114
 server=/rqjtp.com/114.114.114.114
 server=/rqkr.com/114.114.114.114
+server=/rqroytj33.fun/114.114.114.114
 server=/rr-sc.com/114.114.114.114
 server=/rr365.com/114.114.114.114
 server=/rrajz.com/114.114.114.114
