--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69162,6 +69162,7 @@ server=/rrcp.com/114.114.114.114
 server=/rrdtjj.top/114.114.114.114
 server=/rrdtz.com/114.114.114.114
 server=/rree.com/114.114.114.114
+server=/rrfccx.com/114.114.114.114
 server=/rrfed.com/114.114.114.114
 server=/rrfmn.com/114.114.114.114
 server=/rrimg.com/114.114.114.114
