accelerated-domains: add ruan88.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69282,6 +69282,7 @@ server=/rtyy.com/114.114.114.114
 server=/rtyykj.com/114.114.114.114
 server=/ru5sq.com/114.114.114.114
 server=/ruan.cloud/114.114.114.114
+server=/ruan88.com/114.114.114.114
 server=/ruancan.com/114.114.114.114
 server=/ruanchaomin.com/114.114.114.114
 server=/ruancq.xyz/114.114.114.114
