accelerated-domains: add ruiyangcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69403,6 +69403,7 @@ server=/ruixueys.com/114.114.114.114
 server=/ruixunidc.com/114.114.114.114
 server=/ruixunidc.net/114.114.114.114
 server=/ruiyang-ra.com/114.114.114.114
+server=/ruiyangcn.com/114.114.114.114
 server=/ruiying3d.com/114.114.114.114
 server=/ruiyingkeji.com/114.114.114.114
 server=/ruiyuanobserve.com/114.114.114.114
