accelerated-domains: add s3she5k7sm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69630,6 +69630,7 @@ server=/s2ceda.com/114.114.114.114
 server=/s2cinc.com/114.114.114.114
 server=/s2g2b2c.com/114.114.114.114
 server=/s369.com/114.114.114.114
+server=/s3she5k7sm.com/114.114.114.114
 server=/s4648o.com/114.114.114.114
 server=/s4g5.com/114.114.114.114
 server=/s4yd.com/114.114.114.114
