accelerated-domains: add saasops.tech

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69664,6 +69664,7 @@ server=/sa96.com/114.114.114.114
 server=/saaas.com/114.114.114.114
 server=/saagasports.com/114.114.114.114
 server=/saasddos.com/114.114.114.114
+server=/saasops.tech/114.114.114.114
 server=/saasruanjian.com/114.114.114.114
 server=/saasta.net/114.114.114.114
 server=/saaswaf.com/114.114.114.114
