accelerated-domains: add saf588.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69679,6 +69679,7 @@ server=/saebbs.com/114.114.114.114
 server=/saegedu.com/114.114.114.114
 server=/saen.com/114.114.114.114
 server=/saf158.com/114.114.114.114
+server=/saf588.com/114.114.114.114
 server=/safdsafea.com/114.114.114.114
 server=/safeb2b.com/114.114.114.114
 server=/safecenter.com/114.114.114.114
