--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69919,6 +69919,7 @@ server=/sanxinbook.com/114.114.114.114
 server=/sanxing.com/114.114.114.114
 server=/sanxinwin.com/114.114.114.114
 server=/sanxinzgjx.com/114.114.114.114
+server=/sanya1.com/114.114.114.114
 server=/sanyachloe.com/114.114.114.114
 server=/sanyaff.com/114.114.114.114
 server=/sanyajob.com/114.114.114.114
