--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69983,6 +69983,7 @@ server=/saublenew.com/114.114.114.114
 server=/saveatsma.com/114.114.114.114
 server=/savokiss.com/114.114.114.114
 server=/savouer.com/114.114.114.114
+server=/sawadeca.com/114.114.114.114
 server=/sawenow.com/114.114.114.114
 server=/sawuatsurgical.com/114.114.114.114
 server=/saxydc.com/114.114.114.114
