accelerated-domains: add sdfxcv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70488,6 +70488,7 @@ server=/sdfll.com/114.114.114.114
 server=/sdfon.com/114.114.114.114
 server=/sdfscm.com/114.114.114.114
 server=/sdfscx.com/114.114.114.114
+server=/sdfxcv.com/114.114.114.114
 server=/sdfxyoule.com/114.114.114.114
 server=/sdfybj.com/114.114.114.114
 server=/sdg-china.com/114.114.114.114
