--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70528,6 +70528,7 @@ server=/sdht666.com/114.114.114.114
 server=/sdhtkt.com/114.114.114.114
 server=/sdhtsbyy.com/114.114.114.114
 server=/sdhynytc.com/114.114.114.114
+server=/sdhz12333.com/114.114.114.114
 server=/sdi23.com/114.114.114.114
 server=/sdiandian.com/114.114.114.114
 server=/sdiborn.com/114.114.114.114
