accelerated-domains: add sdss99.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70635,6 +70635,7 @@ server=/sdsgwy.com/114.114.114.114
 server=/sdshangya.com/114.114.114.114
 server=/sdshshb.com/114.114.114.114
 server=/sdsmefina.com/114.114.114.114
+server=/sdss99.fun/114.114.114.114
 server=/sdssiliao.com/114.114.114.114
 server=/sdstdc.com/114.114.114.114
 server=/sdsxwz.net/114.114.114.114
