accelerated-domains: add securityinsight.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70785,6 +70785,7 @@ server=/secu100.net/114.114.114.114
 server=/secureqin.net/114.114.114.114
 server=/securitycn.net/114.114.114.114
 server=/securityeb.com/114.114.114.114
+server=/securityinsight.com/114.114.114.114
 server=/secutimes.com/114.114.114.114
 server=/secwk.com/114.114.114.114
 server=/secwx.com/114.114.114.114
