--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71043,6 +71043,7 @@ server=/sfcservice.com/114.114.114.114
 server=/sfddj.com/114.114.114.114
 server=/sfdy13168.com/114.114.114.114
 server=/sfecr.com/114.114.114.114
+server=/sfesdef6.fun/114.114.114.114
 server=/sffdj.com/114.114.114.114
 server=/sfgj.org/114.114.114.114
 server=/sfgy.org/114.114.114.114
