--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71097,6 +71097,7 @@ server=/sg-che.com/114.114.114.114
 server=/sg-micro.com/114.114.114.114
 server=/sg.work/114.114.114.114
 server=/sg169.com/114.114.114.114
+server=/sg888.vip/114.114.114.114
 server=/sg91.net/114.114.114.114
 server=/sg92.com/114.114.114.114
 server=/sgad.site/114.114.114.114
