--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71245,6 +71245,7 @@ server=/shaduizi.com/114.114.114.114
 server=/shafa.com/114.114.114.114
 server=/shafaguanjia.com/114.114.114.114
 server=/shaftgd.com/114.114.114.114
+server=/shagent.com/114.114.114.114
 server=/shahadath.com/114.114.114.114
 server=/shahupark.com/114.114.114.114
 server=/shaidc.com/114.114.114.114
