--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71437,6 +71437,7 @@ server=/shangyeluoji.com/114.114.114.114
 server=/shangyexinzhi.com/114.114.114.114
 server=/shangyicanyin.com/114.114.114.114
 server=/shangyijs.com/114.114.114.114
+server=/shangyouxuan.com/114.114.114.114
 server=/shangyouze.com/114.114.114.114
 server=/shangyuan.ltd/114.114.114.114
 server=/shangyubank.com/114.114.114.114
