accelerated-domains: add shanhaitujian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71445,6 +71445,7 @@ server=/shangyuer.com/114.114.114.114
 server=/shangzhang.com/114.114.114.114
 server=/shangzhibo.tv/114.114.114.114
 server=/shanhainengyuan.com/114.114.114.114
+server=/shanhaitujian.com/114.114.114.114
 server=/shanhaizhanji.com/114.114.114.114
 server=/shanhe.com/114.114.114.114
 server=/shanhe.kim/114.114.114.114
