--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71688,6 +71688,7 @@ server=/shelwee.com/114.114.114.114
 server=/shen-nao.com/114.114.114.114
 server=/shen321.com/114.114.114.114
 server=/shenanhui.com/114.114.114.114
+server=/shenbabao.com/114.114.114.114
 server=/shenbinghang.com/114.114.114.114
 server=/shenbingyiyuan.org/114.114.114.114
 server=/shenbisheji.com/114.114.114.114
