--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72221,6 +72221,7 @@ server=/shjkcable.com/114.114.114.114
 server=/shjob.work/114.114.114.114
 server=/shjsit.com/114.114.114.114
 server=/shjsrg.com/114.114.114.114
+server=/shjsxx.com/114.114.114.114
 server=/shjt.net/114.114.114.114
 server=/shjustdo.com/114.114.114.114
 server=/shjvguan.com/114.114.114.114
