--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72311,6 +72311,7 @@ server=/shomyq.com/114.114.114.114
 server=/shootmedia.net/114.114.114.114
 server=/shop-isv.com/114.114.114.114
 server=/shop2255.com/114.114.114.114
+server=/shop265.com/114.114.114.114
 server=/shop2cn.com/114.114.114.114
 server=/shopbackdrop.com/114.114.114.114
 server=/shopbindi.com/114.114.114.114
