accelerated-domains: add shujuwu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72694,6 +72694,7 @@ server=/shujulin.com/114.114.114.114
 server=/shujupie.com/114.114.114.114
 server=/shujutang.com/114.114.114.114
 server=/shujuwa.net/114.114.114.114
+server=/shujuwu.com/114.114.114.114
 server=/shujuxian1688.com/114.114.114.114
 server=/shujuzhentan.com/114.114.114.114
 server=/shukeba.com/114.114.114.114
