--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73175,6 +73175,7 @@ server=/sinoassistance.com/114.114.114.114
 server=/sinobaron.com/114.114.114.114
 server=/sinobasalt.com/114.114.114.114
 server=/sinobasedm.com/114.114.114.114
+server=/sinocache.net/114.114.114.114
 server=/sinocare.com/114.114.114.114
 server=/sinocars.com/114.114.114.114
 server=/sinocateringexpo.com/114.114.114.114
