--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73703,6 +73703,7 @@ server=/smart365ol.com/114.114.114.114
 server=/smartautoclub.com/114.114.114.114
 server=/smartbgp.com/114.114.114.114
 server=/smartcloudcon.com/114.114.114.114
+server=/smartcom.cc/114.114.114.114
 server=/smartdeep.com/114.114.114.114
 server=/smartdot.com/114.114.114.114
 server=/smartedm.com/114.114.114.114
