accelerated-domains: add snjulebu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73905,6 +73905,7 @@ server=/snjairport.com/114.114.114.114
 server=/snjbs.com/114.114.114.114
 server=/snjjiu.com/114.114.114.114
 server=/snjrsks.com/114.114.114.114
+server=/snjulebu.com/114.114.114.114
 server=/snkhome.com/114.114.114.114
 server=/snkjol.com/114.114.114.114
 server=/snkshoe.com/114.114.114.114
