--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73912,6 +73912,7 @@ server=/snjairport.com/114.114.114.114
 server=/snjbs.com/114.114.114.114
 server=/snjjiu.com/114.114.114.114
 server=/snjrsks.com/114.114.114.114
+server=/snjulebu.com/114.114.114.114
 server=/snkhome.com/114.114.114.114
 server=/snkjol.com/114.114.114.114
 server=/snkshoe.com/114.114.114.114
