accelerated-domains: add socialjia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73991,6 +73991,7 @@ server=/socialbasecustomercontent.com/114.114.114.114
 server=/socialbaseusercontent.com/114.114.114.114
 server=/socialbeta.com/114.114.114.114
 server=/socialgongz-edu.com/114.114.114.114
+server=/socialjia.com/114.114.114.114
 server=/socialpls.com/114.114.114.114
 server=/socite.com/114.114.114.114
 server=/socket.tw/114.114.114.114
