accelerated-domains: add songlongtech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74167,6 +74167,7 @@ server=/songhualan.com/114.114.114.114
 server=/songhuwan.com/114.114.114.114
 server=/songker.com/114.114.114.114
 server=/songlei.net/114.114.114.114
+server=/songlongtech.com/114.114.114.114
 server=/songma.com/114.114.114.114
 server=/songmao-idc.com/114.114.114.114
 server=/songqinnet.com/114.114.114.114
