accelerated-domains: add sotunet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74288,6 +74288,7 @@ server=/sotongwang.com/114.114.114.114
 server=/sotouv.com/114.114.114.114
 server=/sotoy.net/114.114.114.114
 server=/sotu114.com/114.114.114.114
+server=/sotunet.com/114.114.114.114
 server=/sotwm.com/114.114.114.114
 server=/sou-yun.com/114.114.114.114
 server=/sou.com/114.114.114.114
