--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74299,6 +74299,7 @@ server=/sotunet.com/114.114.114.114
 server=/sotwm.com/114.114.114.114
 server=/sou-yun.com/114.114.114.114
 server=/sou.com/114.114.114.114
+server=/sou58.com/114.114.114.114
 server=/soua.com/114.114.114.114
 server=/souaiche.com/114.114.114.114
 server=/souajki.com/114.114.114.114
