accelerated-domains: add souacode.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74301,6 +74301,7 @@ server=/sou-yun.com/114.114.114.114
 server=/sou.com/114.114.114.114
 server=/sou58.com/114.114.114.114
 server=/soua.com/114.114.114.114
+server=/souacode.com/114.114.114.114
 server=/souaiche.com/114.114.114.114
 server=/souajki.com/114.114.114.114
 server=/souajki.net/114.114.114.114
