--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74435,6 +74435,7 @@ server=/spaceestar.com/114.114.114.114
 server=/spacei.net/114.114.114.114
 server=/spacemit.com/114.114.114.114
 server=/spacesystech.com/114.114.114.114
+server=/spahelani.com/114.114.114.114
 server=/spanishknow.com/114.114.114.114
 server=/sparenode.com/114.114.114.114
 server=/spark-page.com/114.114.114.114
