accelerated-domains: add spdyidea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74459,6 +74459,7 @@ server=/spdiy.com/114.114.114.114
 server=/spdiy.net/114.114.114.114
 server=/spdl.com/114.114.114.114
 server=/spdydns.com/114.114.114.114
+server=/spdyidea.com/114.114.114.114
 server=/specialcdnstatus.com/114.114.114.114
 server=/spectreax.com/114.114.114.114
 server=/spectreax.site/114.114.114.114
