--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74465,6 +74465,7 @@ server=/spectreax.com/114.114.114.114
 server=/spectreax.site/114.114.114.114
 server=/speechless.pw/114.114.114.114
 server=/speedcdns.com/114.114.114.114
+server=/speedcdns.info/114.114.114.114
 server=/speedmanager.net/114.114.114.114
 server=/speednt.com/114.114.114.114
 server=/speedpdf.com/114.114.114.114
