accelerated-domains: add sscefsol.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74654,6 +74654,7 @@ server=/ssbjf.com/114.114.114.114
 server=/ssbx.me/114.114.114.114
 server=/ssby.cc/114.114.114.114
 server=/ssby66.com/114.114.114.114
+server=/sscefsol.com/114.114.114.114
 server=/sscha.com/114.114.114.114
 server=/sschengtou.com/114.114.114.114
 server=/sscity.org/114.114.114.114
