--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74725,6 +74725,7 @@ server=/ssqzj.com/114.114.114.114
 server=/ssrcdn.com/114.114.114.114
 server=/ssrcr.com/114.114.114.114
 server=/ssreader.com/114.114.114.114
+server=/ssrj.net/114.114.114.114
 server=/ssrlzy.net/114.114.114.114
 server=/ssscdn.com/114.114.114.114
 server=/sssch.net/114.114.114.114
