--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74811,6 +74811,7 @@ server=/starislatinik.com/114.114.114.114
 server=/starkai.com/114.114.114.114
 server=/starmily.com/114.114.114.114
 server=/starming.com/114.114.114.114
+server=/starmobs.com/114.114.114.114
 server=/starooo.com/114.114.114.114
 server=/starpainters.net/114.114.114.114
 server=/starpiao.com/114.114.114.114
