accelerated-domains: add stater-tc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74858,6 +74858,7 @@ server=/staryea.com/114.114.114.114
 server=/stat-nba.com/114.114.114.114
 server=/stat08.com/114.114.114.114
 server=/stat18.com/114.114.114.114
+server=/stater-tc.com/114.114.114.114
 server=/static.cdnetworks.com/114.114.114.114
 server=/static.eprintsw.com/114.114.114.114
 server=/staticaa.com/114.114.114.114
