--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74854,6 +74854,7 @@ server=/stat18.com/114.114.114.114
 server=/stater-tc.com/114.114.114.114
 server=/static.cdnetworks.com/114.114.114.114
 server=/static.eprintsw.com/114.114.114.114
+server=/static163.net/114.114.114.114
 server=/staticaa.com/114.114.114.114
 server=/staticdn.net/114.114.114.114
 server=/staticec.com/114.114.114.114
