accelerated-domains: add sucainiu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75074,6 +75074,7 @@ server=/sucaidao.com/114.114.114.114
 server=/sucaifu.com/114.114.114.114
 server=/sucaijiaxiao.com/114.114.114.114
 server=/sucaijishi.com/114.114.114.114
+server=/sucainiu.com/114.114.114.114
 server=/sucaiplus.com/114.114.114.114
 server=/sucaisucai.com/114.114.114.114
 server=/sucaitu.cc/114.114.114.114
