accelerated-domains: add suckdude.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75091,6 +75091,7 @@ server=/suchasplus.com/114.114.114.114
 server=/suchengmeizhan.com/114.114.114.114
 server=/suchugao.com/114.114.114.114
 server=/suchz.com/114.114.114.114
+server=/suckdude.com/114.114.114.114
 server=/sucop.com/114.114.114.114
 server=/sucoupon.com/114.114.114.114
 server=/sudaizhijia.com/114.114.114.114
