--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75155,6 +75155,7 @@ server=/suijinetworks.com/114.114.114.114
 server=/suijunlaowu.com/114.114.114.114
 server=/suilengea.com/114.114.114.114
 server=/suileyoo.com/114.114.114.114
+server=/suimeng.la/114.114.114.114
 server=/suinikan.com/114.114.114.114
 server=/suiningwang.com/114.114.114.114
 server=/suiniyi.com/114.114.114.114
