--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75383,6 +75383,7 @@ server=/suofeiyashop.com/114.114.114.114
 server=/suoge.net/114.114.114.114
 server=/suokao.com/114.114.114.114
 server=/suoluomei.com/114.114.114.114
+server=/suopingbao.com/114.114.114.114
 server=/suosihulian.com/114.114.114.114
 server=/suotn.com/114.114.114.114
 server=/suoxin5.com/114.114.114.114
