accelerated-domains: add swad332.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75548,6 +75548,7 @@ server=/sw-bllp.com/114.114.114.114
 server=/sw0013.com/114.114.114.114
 server=/sw2008.com/114.114.114.114
 server=/sw996.com/114.114.114.114
+server=/swad332.fun/114.114.114.114
 server=/swaeab.com/114.114.114.114
 server=/swakopuranium.com/114.114.114.114
 server=/swanchemical.com/114.114.114.114
