--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75669,6 +75669,7 @@ server=/sxdkj.com/114.114.114.114
 server=/sxdrkx.com/114.114.114.114
 server=/sxds.com/114.114.114.114
 server=/sxdygbjy.com/114.114.114.114
+server=/sxdyrq.com/114.114.114.114
 server=/sxdz029.com/114.114.114.114
 server=/sxdzyp.com/114.114.114.114
 server=/sxepc.com/114.114.114.114
