--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75762,6 +75762,7 @@ server=/sxssyh.com/114.114.114.114
 server=/sxstdl.com/114.114.114.114
 server=/sxswfzjt.com/114.114.114.114
 server=/sxswjkgs.com/114.114.114.114
+server=/sxsztv.com/114.114.114.114
 server=/sxszw.net/114.114.114.114
 server=/sxtianjian.com/114.114.114.114
 server=/sxtppm.com/114.114.114.114
