accelerated-domains: add sxzcrq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75805,6 +75805,7 @@ server=/sxyj.net/114.114.114.114
 server=/sxyrxb.com/114.114.114.114
 server=/sxyyzcj.com/114.114.114.114
 server=/sxzb.app/114.114.114.114
+server=/sxzcrq.com/114.114.114.114
 server=/sxzdyl.com/114.114.114.114
 server=/sxzhaobiao.com/114.114.114.114
 server=/sxzhongfei.com/114.114.114.114
