--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75845,6 +75845,7 @@ server=/sydfty.com/114.114.114.114
 server=/sydimg.com/114.114.114.114
 server=/sydjwl.com/114.114.114.114
 server=/sydkidsedu.com/114.114.114.114
+server=/sydswxx.com/114.114.114.114
 server=/sydw8.com/114.114.114.114
 server=/sydxdl.com/114.114.114.114
 server=/syeg-ev.com/114.114.114.114
