--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75928,6 +75928,7 @@ server=/syrkkxc.com/114.114.114.114
 server=/syrszs.com/114.114.114.114
 server=/syrzh.com/114.114.114.114
 server=/sys-ele.com/114.114.114.114
+server=/sys321.com/114.114.114.114
 server=/syscan360.com/114.114.114.114
 server=/syscan360.net/114.114.114.114
 server=/syscan360.org/114.114.114.114
