accelerated-domains: add syzdbxg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76001,6 +76001,7 @@ server=/syyyd.com/114.114.114.114
 server=/syyyking.com/114.114.114.114
 server=/syyykj.xyz/114.114.114.114
 server=/syyzhpc.com/114.114.114.114
+server=/syzdbxg.com/114.114.114.114
 server=/syzdhyb.com/114.114.114.114
 server=/syzlzz.com/114.114.114.114
 server=/syzoukan.com/114.114.114.114
