--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76295,6 +76295,7 @@ server=/szlnxh.com/114.114.114.114
 server=/szlottery.org/114.114.114.114
 server=/szltech.com/114.114.114.114
 server=/szltlh.com/114.114.114.114
+server=/szltwl.com/114.114.114.114
 server=/szltwlw.com/114.114.114.114
 server=/szluxon.com/114.114.114.114
 server=/szlvbarcode.com/114.114.114.114
