accelerated-domains: add sznj91.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76337,6 +76337,7 @@ server=/sznfwt.net/114.114.114.114
 server=/szniego.com/114.114.114.114
 server=/szniushi.com/114.114.114.114
 server=/szniute.com/114.114.114.114
+server=/sznj91.com/114.114.114.114
 server=/sznnhg.com/114.114.114.114
 server=/szns-marathon.com/114.114.114.114
 server=/sznyfz.com/114.114.114.114
