accelerated-domains: add szny189.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76340,6 +76340,7 @@ server=/szniute.com/114.114.114.114
 server=/sznj91.com/114.114.114.114
 server=/sznnhg.com/114.114.114.114
 server=/szns-marathon.com/114.114.114.114
+server=/szny189.com/114.114.114.114
 server=/sznyfz.com/114.114.114.114
 server=/sznyyznnj.com/114.114.114.114
 server=/szobk.com/114.114.114.114
