--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76591,6 +76591,7 @@ server=/t5xs.com/114.114.114.114
 server=/t66.com/114.114.114.114
 server=/t6q.com/114.114.114.114
 server=/t79d6.com/114.114.114.114
+server=/t7rt5.com/114.114.114.114
 server=/t7z.cc/114.114.114.114
 server=/t85.net/114.114.114.114
 server=/t855vao.com/114.114.114.114
