accelerated-domains: add tadseeker.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76606,6 +76606,7 @@ server=/tacool.com/114.114.114.114
 server=/tacpvc.com/114.114.114.114
 server=/tactan.net/114.114.114.114
 server=/tadgkj.com/114.114.114.114
+server=/tadseeker.com/114.114.114.114
 server=/tadu.com/114.114.114.114
 server=/taeapp.com/114.114.114.114
 server=/taeee.com/114.114.114.114
