--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76738,6 +76738,7 @@ server=/talicai.com/114.114.114.114
 server=/taliove.com/114.114.114.114
 server=/taljdns.com/114.114.114.114
 server=/talk-fun.com/114.114.114.114
+server=/talk853.com/114.114.114.114
 server=/talkgw.com/114.114.114.114
 server=/talkie-ai.com/114.114.114.114
 server=/talkingchina.com/114.114.114.114
