accelerated-domains: add talldns.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76750,6 +76750,7 @@ server=/talkop.com/114.114.114.114
 server=/talkwithtrend.com/114.114.114.114
 server=/talkxj.com/114.114.114.114
 server=/talkyun.com/114.114.114.114
+server=/talldns.net/114.114.114.114
 server=/talmdhome.com/114.114.114.114
 server=/taluo.com/114.114.114.114
 server=/taluo5.com/114.114.114.114
