--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76871,6 +76871,7 @@ server=/taobao.global/114.114.114.114
 server=/taobao.net/114.114.114.114
 server=/taobao.org/114.114.114.114
 server=/taobao.tw/114.114.114.114
+server=/taobao.wang/114.114.114.114
 server=/taobao1111.com/114.114.114.114
 server=/taobao2136.com/114.114.114.114
 server=/taobao92.com/114.114.114.114
