accelerated-domains: add taojianghu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76923,6 +76923,7 @@ server=/taohuazu.pw/114.114.114.114
 server=/taohui.pub/114.114.114.114
 server=/taohuichang.com/114.114.114.114
 server=/taohuren.com/114.114.114.114
+server=/taojianghu.com/114.114.114.114
 server=/taojiji.com/114.114.114.114
 server=/taojin6.com/114.114.114.114
 server=/taojindi.com/114.114.114.114
