accelerated-domains: add taotaogeren.xyz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76978,6 +76978,7 @@ server=/taoshudang.com/114.114.114.114
 server=/taosj.com/114.114.114.114
 server=/taotao.com/114.114.114.114
 server=/taotaocar.com/114.114.114.114
+server=/taotaogeren.xyz/114.114.114.114
 server=/taotaoit.com/114.114.114.114
 server=/taotaosports.com/114.114.114.114
 server=/taotian.com/114.114.114.114
