--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77081,6 +77081,7 @@ server=/tbh5.com/114.114.114.114
 server=/tbhcc.com/114.114.114.114
 server=/tbhelper.com/114.114.114.114
 server=/tbi-osk.com/114.114.114.114
+server=/tbjfw.com/114.114.114.114
 server=/tbjt18.com/114.114.114.114
 server=/tbjtss.com/114.114.114.114
 server=/tbkf.net/114.114.114.114
