--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77088,6 +77088,7 @@ server=/tbkf.net/114.114.114.114
 server=/tbl-import.com/114.114.114.114
 server=/tblk.me/114.114.114.114
 server=/tbmcas.com/114.114.114.114
+server=/tbmkt.com/114.114.114.114
 server=/tbnimg.com/114.114.114.114
 server=/tbnrm.com/114.114.114.114
 server=/tboxn.com/114.114.114.114
