accelerated-domains: add tdiac.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77224,6 +77224,7 @@ server=/tdchatvip.us/114.114.114.114
 server=/tddmp.com/114.114.114.114
 server=/tdfcw.com/114.114.114.114
 server=/tdgod.com/114.114.114.114
+server=/tdiac.com/114.114.114.114
 server=/tdict.com/114.114.114.114
 server=/tdimg.com/114.114.114.114
 server=/tditor.com/114.114.114.114
