accelerated-domains: add tegoushe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77354,6 +77354,7 @@ server=/tefl-china.net/114.114.114.114
 server=/tefscloud.com/114.114.114.114
 server=/tefshipping.com/114.114.114.114
 server=/tegongji.com/114.114.114.114
+server=/tegoushe.com/114.114.114.114
 server=/tehub.com/114.114.114.114
 server=/tehuituan.com/114.114.114.114
 server=/tejiabiao.com/114.114.114.114
