accelerated-domains: add teryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77533,6 +77533,7 @@ server=/terransforce.com/114.114.114.114
 server=/terratribes.com/114.114.114.114
 server=/terrytec.com/114.114.114.114
 server=/teruide.net/114.114.114.114
+server=/teryt111.fun/114.114.114.114
 server=/tese5.com/114.114.114.114
 server=/tesele.com/114.114.114.114
 server=/tesery.com/114.114.114.114
