accelerated-domains: add tqeferty33.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79095,6 +79095,7 @@ server=/tqcrane.com/114.114.114.114
 server=/tqcto.com/114.114.114.114
 server=/tqdianbiao.com/114.114.114.114
 server=/tqedu.net/114.114.114.114
+server=/tqeferty33.fun/114.114.114.114
 server=/tqhj88.com/114.114.114.114
 server=/tqiantu.com/114.114.114.114
 server=/tql.ink/114.114.114.114
