accelerated-domains: add treferty33.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79193,6 +79193,7 @@ server=/treehousesub.com/114.114.114.114
 server=/treesir.pub/114.114.114.114
 server=/treetwins.com/114.114.114.114
 server=/treeyee.com/114.114.114.114
+server=/treferty33.fun/114.114.114.114
 server=/trekin.space/114.114.114.114
 server=/trekiz.com/114.114.114.114
 server=/trend6.com/114.114.114.114
