accelerated-domains: add trrtv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79251,6 +79251,7 @@ server=/tronlife.com/114.114.114.114
 server=/tropcdn.com/114.114.114.114
 server=/trpcdn.net/114.114.114.114
 server=/trqjrp.xyz/114.114.114.114
+server=/trrtv.com/114.114.114.114
 server=/trs-logistics.com/114.114.114.114
 server=/trsjgdj.com/114.114.114.114
 server=/trsoft.vip/114.114.114.114
