accelerated-domains: add tuoaa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79725,6 +79725,7 @@ server=/tuniuins.com/114.114.114.114
 server=/tuniuops.net/114.114.114.114
 server=/tunynet.com/114.114.114.114
 server=/tuo-pan.com/114.114.114.114
+server=/tuoaa.com/114.114.114.114
 server=/tuobeng.net/114.114.114.114
 server=/tuocad.com/114.114.114.114
 server=/tuodangclub.com/114.114.114.114
