accelerated-domains: add ubibibi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80237,6 +80237,7 @@ server=/ubersz.com/114.114.114.114
 server=/ubestkid.com/114.114.114.114
 server=/ubetween.com/114.114.114.114
 server=/ubgame.com/114.114.114.114
+server=/ubibibi.com/114.114.114.114
 server=/ubicdn.com/114.114.114.114
 server=/ubijoy.com/114.114.114.114
 server=/ubiquant.com/114.114.114.114
