accelerated-domains: add ucaii.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80270,6 +80270,7 @@ server=/uc669.com/114.114.114.114
 server=/uca6.com/114.114.114.114
 server=/ucacc.com/114.114.114.114
 server=/ucai123.com/114.114.114.114
+server=/ucaii.com/114.114.114.114
 server=/ucaiyuan.com/114.114.114.114
 server=/ucaiyun.com/114.114.114.114
 server=/ucan2fs.com/114.114.114.114
