accelerated-domains: add uhuf56.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80453,6 +80453,7 @@ server=/uhouzz.com/114.114.114.114
 server=/uhp.cc/114.114.114.114
 server=/uhs68.com/114.114.114.114
 server=/uhsea.com/114.114.114.114
+server=/uhuf56.fun/114.114.114.114
 server=/uhuibao.com/114.114.114.114
 server=/uhuitong.com/114.114.114.114
 server=/uhuwang.com/114.114.114.114
