accelerated-domains: add umpxkvtt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80597,6 +80597,7 @@ server=/umlchina.com/114.114.114.114
 server=/umlife.net/114.114.114.114
 server=/umpay.com/114.114.114.114
 server=/umphek.com/114.114.114.114
+server=/umpxkvtt.com/114.114.114.114
 server=/ums86.com/114.114.114.114
 server=/umsamd.com/114.114.114.114
 server=/umsns.com/114.114.114.114
