accelerated-domains: add usb166.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80914,6 +80914,7 @@ server=/usalxb.com/114.114.114.114
 server=/usaphoenixnews.com/114.114.114.114
 server=/usashopcn.com/114.114.114.114
 server=/usayouma.com/114.114.114.114
+server=/usb166.com/114.114.114.114
 server=/usbing.com/114.114.114.114
 server=/usbmi.com/114.114.114.114
 server=/usbzh.com/114.114.114.114
