accelerated-domains: add uug22.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81032,6 +81032,7 @@ server=/uuecs.com/114.114.114.114
 server=/uuedutech.com/114.114.114.114
 server=/uufund.com/114.114.114.114
 server=/uufuns.com/114.114.114.114
+server=/uug22.com/114.114.114.114
 server=/uugai.com/114.114.114.114
 server=/uugame.com/114.114.114.114
 server=/uugtv.com/114.114.114.114
