accelerated-domains: add uzhaj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81153,6 +81153,7 @@ server=/uyuuy.xyz/114.114.114.114
 server=/uyuyao.com/114.114.114.114
 server=/uzai.com/114.114.114.114
 server=/uzaicdn.com/114.114.114.114
+server=/uzhaj.com/114.114.114.114
 server=/uzhika.com/114.114.114.114
 server=/uzhuangji.net/114.114.114.114
 server=/uzise.com/114.114.114.114
