accelerated-domains: add vdfvdf33q.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81359,6 +81359,7 @@ server=/vdaye.com/114.114.114.114
 server=/vdazz.net/114.114.114.114
 server=/vdbet.com/114.114.114.114
 server=/vdfbjd-qwurnf-gsmgb.com/114.114.114.114
+server=/vdfvdf33q.fun/114.114.114.114
 server=/vdiagnostic.com/114.114.114.114
 server=/vdian.com/114.114.114.114
 server=/vdisk.me/114.114.114.114
