accelerated-domains: add venbbs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81427,6 +81427,7 @@ server=/vemarsstatic.com/114.114.114.114
 server=/vemic.com/114.114.114.114
 server=/vemte.com/114.114.114.114
 server=/vemvm.com/114.114.114.114
+server=/venbbs.com/114.114.114.114
 server=/vendue.vip/114.114.114.114
 server=/venlvcloud.com/114.114.114.114
 server=/ventoy.net/114.114.114.114
