accelerated-domains: add vjianshen1688.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81799,6 +81799,7 @@ server=/viyuan.com/114.114.114.114
 server=/vj24co.com/114.114.114.114
 server=/vjgmcoqs.com/114.114.114.114
 server=/vjia.com/114.114.114.114
+server=/vjianshen1688.com/114.114.114.114
 server=/vjiazu.com/114.114.114.114
 server=/vjie.com/114.114.114.114
 server=/vjifen.com/114.114.114.114
