accelerated-domains: add vkjnd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81812,6 +81812,7 @@ server=/vkaijiang.com/114.114.114.114
 server=/vkbaby.com/114.114.114.114
 server=/vkehu.com/114.114.114.114
 server=/vkemai.com/114.114.114.114
+server=/vkjnd.com/114.114.114.114
 server=/vkjsq.com/114.114.114.114
 server=/vkoolhf.com/114.114.114.114
 server=/vkoopp.com/114.114.114.114
