accelerated-domains: add vliao6.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81829,6 +81829,7 @@ server=/vland-official.com/114.114.114.114
 server=/vlandgroup.com/114.114.114.114
 server=/vlcms.com/114.114.114.114
 server=/vliang.com/114.114.114.114
+server=/vliao6.com/114.114.114.114
 server=/vlight.me/114.114.114.114
 server=/vlightv.com/114.114.114.114
 server=/vlink.cc/114.114.114.114
