accelerated-domains: add vtbfgnf00.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82167,6 +82167,7 @@ server=/vsx10.com/114.114.114.114
 server=/vsyo.com/114.114.114.114
 server=/vsyy.net/114.114.114.114
 server=/vtache.com/114.114.114.114
+server=/vtbfgnf00.fun/114.114.114.114
 server=/vteamgroup.com/114.114.114.114
 server=/vtears.com/114.114.114.114
 server=/vtepai.com/114.114.114.114
