accelerated-domains: add vvnna.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82216,6 +82216,7 @@ server=/vviptuangou.com/114.114.114.114
 server=/vvjob.com/114.114.114.114
 server=/vvlian.com/114.114.114.114
 server=/vvmeiju.com/114.114.114.114
+server=/vvnna.com/114.114.114.114
 server=/vvo2o.com/114.114.114.114
 server=/vvpgwg.xyz/114.114.114.114
 server=/vvpncdn.com/114.114.114.114
